# reader

./: .gitignore  .pre-commit-config.yaml  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  main.py
src/application/: book_service.py  dto.py  exceptions.py
src/domain/: book.py  chapter.py  cover.py
src/infrastructure/adapters/: book_cover_repo.py  book_data_repo.py  book_repo.py
src/infrastructure/db/migrations/: env.py
src/infrastructure/db/migrations/versions/: aef778c05d1c_added_book_table.py  ceee504777c9_added_book_table.py
src/infrastructure/db/tables/: __init__.py  base.py  book.py
src/infrastructure/di/: factories.py
src/infrastructure/epub/: load.py  sorted.py
src/presentation/entrypoints/: book.py
src/presentation/entrypoints/site/: reader.py  utils.py
src/presentation/filters/: book.py
src/presentation/providers/: book_service.py
src/presentation/templates/: book.html
src/presentation/webmodels/: book.py  chapter.py
webpack/: package-lock.json  package.json
webpack/src/: index.js
webui/: package.json
webui/src/: index.js
