[tool.poetry]
name = "reader"
version = "0.1.0"
description = ""
authors = ["Daniil Solynin <didhat82@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ebooklib = "^0.18"
attrs = "^23.1.0"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
