[tool.poetry]
name = "reader"
version = "0.1.0"
description = ""
authors = ["Daniil Solynin <didhat82@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ebooklib = "^0.18"
attrs = "^23.1.0"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
python-multipart = "^0.0.6"
alembic = "^1.12.0"
sqlalchemy = "^2.0.21"
aiosqlite = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
